@@ -21,11 +21,11 @@ import de.ii.ogcapi.features.core.domain.JsonSchemaString;
 import de.ii.ogcapi.features.core.domain.SchemaProperty;
 import de.ii.ogcapi.features.core.domain.SchemaType;
 import de.ii.ogcapi.foundation.domain.I18n;
-import de.ii.ogcapi.foundation.domain.URICustomizer;
 import de.ii.ogcapi.html.domain.FormatHtml;
 import de.ii.ogcapi.html.domain.NavigationDTO;
 import de.ii.ogcapi.html.domain.OgcApiView;
 import de.ii.xtraplatform.features.domain.FeatureTypeConfiguration;
+import de.ii.xtraplatform.web.domain.URICustomizer;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.Comparator;
@@ -34,7 +34,6 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.immutables.value.Value;
 import org.immutables.value.Value.Style.ImplementationVisibility;
 
@@ -130,14 +129,14 @@ public abstract class SchemaView extends OgcApiView implements FormatHtml {
       } else {
         builder2.type("string");
       }
-      builder2.values(((JsonSchemaString) value).getEnums());
+      ((JsonSchemaString) value).getEnums().ifPresent(builder2::values);
     } else if (value instanceof JsonSchemaNumber) {
       builder2.type("number");
     } else if (value instanceof JsonSchemaInteger) {
       builder2.type("integer");
-      builder2.values(
-          ((JsonSchemaInteger) value)
-              .getEnums().stream().map(String::valueOf).collect(Collectors.toList()));
+      ((JsonSchemaInteger) value)
+          .getEnums()
+          .ifPresent(enums -> builder2.values(enums.stream().map(String::valueOf).toList()));
     } else if (value instanceof JsonSchemaBoolean) {
       builder2.type("boolean");
     } else if (value instanceof JsonSchemaGeometry) {
